# rustshot

./: Cargo.toml  LICENSE  readme.md
assets/: prepare.sh
src/: app.rs  main.rs
src/native/: app_icon.rs  icon_data.rs  mod.rs  window.rs
src/snip/: app.rs  mod.rs
