[package]
name = "rustshot"
description = "Cross-Platform Open Source Screenshot Utility"
authors = ["Filippo Rossi", "Lorenzo Canciani", "Carlo Bottaro"]
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.22.0"
egui = "0.22.0"
egui-winit = "0.22.0"
egui_glow = { version = "0.22.0", features = ["winit"] }
glow = "0.12.1"
glutin = "0.30.8"
glutin-winit = "0.3.0"
image = "0.24.6"
log = "0.4.17"
raw-window-handle = "0.5.2"
tray-icon = "0.5.1"

[package.metadata.bundle]
name = "Rust Shot"
identifier = "dev.filippo.rustshot"
icon = [
  "assets/icon-512x512@2x.png",
  "assets/icon-128x128@2x.png",
  "assets/icon-32x32@2x.png",
  "assets/icon-512x512.png",
  "assets/icon-128x128.png",
  "assets/icon-32x32.png",
]
category = "Utility"
short_description = "Cross-Platform Open Source Screenshot Utility"
long_description = """
Rust Shot is a cross-platform, open-source screenshot utility designed to 
provide a robust and user-friendly experience for users of all skill levels. 
It offers a comprehensive suite of tools and functionalities that enable users 
to capture, annotate, and share screenshots with ease and precision.
"""

[target."cfg(target_os = \"linux\")".dependencies]
libappindicator = "0.8"
dirs-next = "2.0"
gtk = "0.16"

[target.'cfg(any(target_os = "macos"))'.dependencies]
cocoa = "0.24.1"
objc = "0.2.7"

[target.'cfg(any(target_os = "windows"))'.dependencies]
winapi = "0.3.9"
